fixes overlapping text on homepage

--- a/react-portfolio/src/components/Home/index.scss
+++ b/react-portfolio/src/components/Home/index.scss
@@ -8,6 +8,7 @@
         width: 40%;
         max-height: 90%;
         text-align: left;
+        z-index: 2;
     }
 
     h1 {
